--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,6 @@
 \documentclass[a4paper,oneside,12pt]{article}
 \usepackage{microtype}
-\usepackage[utf8]{luainputenc}
-\usepackage[T1]{fontenc}
+\usepackage{fontspec}
 \usepackage{textcomp}
 
 \usepackage{tikz}
