--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,5 @@
 \documentclass[a4paper,oneside,12pt]{article}
-\usepackage{microtype}
-\usepackage{fontspec}
-\usepackage{textcomp}
+\usepackage{luatextra}
 
 \usepackage{tikz}
 \tikzset{samples=100}
